crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@248.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[{\"a\": 1, \"b\": [1, 2]}, {\"c\": {\"a\": \"bbb\"}}]', 'lax $.keyvalue()');"
---
SelectStmt@0..92
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..90
    FuncCall@7..90
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..70
        Sconst@24..70 "'[{\"a\": 1, \"b\": [1, 2 ..."
      Ascii44@70..71 ","
      Whitespace@71..72 " "
      AConst@72..90
        Sconst@72..90 "'lax $.keyvalue()'"
  Ascii41@90..91 ")"
  Ascii59@91..92 ";"

