crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1]', 'lax $[10000000000000000]');"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'[1]'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..57
        Sconst@31..57 "'lax $[10000000000000 ..."
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

