crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@254.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('null', '$.double()', silent => true);"
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..60
    FuncCall@7..60
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'null'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..44
        Sconst@32..44 "'$.double()'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      NamedArgExpr@46..60
        Ident@46..52 "silent"
        Whitespace@52..53 " "
        EqualsGreater@53..55 "=>"
        Whitespace@55..56 " "
        AConst@56..60
          TrueP@56..60 "true"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

